--- a/src/index.css
+++ b/src/index.css
@@ -2,20 +2,50 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --background-color: #ffffff;
-  --foreground-color: #000000;
+@font-face {
+  font-family: "Grange";
+  src: url("@/assets/fonts/grange.regular.ttf");
 }
 
-* {
-  box-sizing: border-box;
+@font-face {
+  font-family: "Proxima Nova";
+  src: url("@/assets/fonts/Proxima Nova/proximanova_regular.ttf");
 }
 
-body {
-  margin: 0;
-  padding: 0;
-}
+@layer base {
+  :root {
+    --primary-color: #c3edff;
+    --background-color: #ffffff;
+    --foreground-color: #1c2635;
+    --muted-content: #eef7fb;
+    --content: #ffffff;
+  }
 
-a {
-  text-decoration: none;
+  * {
+    box-sizing: border-box;
+  }
+
+  body {
+    margin: 0;
+    padding: 0;
+    font-family: "Proxima Nova";
+  }
+
+  a {
+    text-decoration: none;
+  }
+
+  h1,
+  h2,
+  h3 {
+    font-family: "Grange";
+  }
+
+  h1 {
+    @apply text-[40px] font-medium;
+  }
+
+  p {
+    @apply text-base font-normal;
+  }
 }
