--- a/src/index.css
+++ b/src/index.css
@@ -4,12 +4,26 @@
 
 @font-face {
   font-family: "Grange";
-  src: url("@/assets/fonts/grange.regular.ttf");
+  src: url("@/assets/fonts/Grange/grange_medium_extended.otf");
+  font-weight: 500;
+}
+
+@font-face {
+  font-family: "Grange";
+  src: url("@/assets/fonts/Grange/grange_light_extended.otf");
+  font-weight: 300;
 }
 
 @font-face {
   font-family: "Proxima Nova";
   src: url("@/assets/fonts/Proxima Nova/proximanova_regular.ttf");
+  font-weight: 400;
+}
+
+@font-face {
+  font-family: "Proxima Nova";
+  src: url("@/assets/fonts/Proxima Nova/proximanova_medium.otf");
+  font-weight: 500;
 }
 
 @layer base {
@@ -50,5 +64,13 @@
 
   p {
     @apply text-base font-normal;
+  }
+
+  .grange {
+    font-family: "Grange";
+  }
+
+  button {
+    font-family: "Proxima Nova";
   }
 }
