--- a/src/index.css
+++ b/src/index.css
@@ -33,6 +33,7 @@
     --background-color: #ffffff;
     --foreground-color: #1c2635;
     --muted-content: #eef7fb;
+    --inactive: #e3e3e3;
     --content: #ffffff;
     --muted-foreground: #677487;
     --border-color: #5bc1ed;
@@ -69,53 +70,65 @@
   p {
     @apply text-base font-normal;
   }
+}
 
-  .grange {
-    font-family: "Grange";
-  }
+.grange {
+  font-family: "Grange";
+}
 
-  button {
-    font-family: "Proxima Nova";
-  }
+button {
+  font-family: "Proxima Nova";
+}
 
-  .loader {
-    width: 28px;
-    height: 28px;
-    border-radius: 50%;
-    position: relative;
-    animation: rotate 1s linear infinite;
-  }
-  .loader::before {
-    content: "";
-    box-sizing: border-box;
-    position: absolute;
-    inset: 0px;
-    border-radius: 50%;
-    border: 3px solid var(--muted-foreground);
-    animation: prixClipFix 2s linear infinite;
-  }
+.loader {
+  width: 28px;
+  height: 28px;
+  border-radius: 50%;
+  position: relative;
+  animation: rotate 1s linear infinite;
+}
+.loader::before {
+  content: "";
+  box-sizing: border-box;
+  position: absolute;
+  inset: 0px;
+  border-radius: 50%;
+  border: 3px solid var(--muted-foreground);
+  animation: prixClipFix 2s linear infinite;
+}
 
-  @keyframes rotate {
-    100% {
-      transform: rotate(360deg);
-    }
+@keyframes rotate {
+  100% {
+    transform: rotate(360deg);
   }
+}
 
-  @keyframes prixClipFix {
-    0% {
-      clip-path: polygon(50% 50%, 0 0, 0 0, 0 0, 0 0, 0 0);
-    }
-    25% {
-      clip-path: polygon(50% 50%, 0 0, 100% 0, 100% 0, 100% 0, 100% 0);
-    }
-    50% {
-      clip-path: polygon(50% 50%, 0 0, 100% 0, 100% 100%, 100% 100%, 100% 100%);
-    }
-    75% {
-      clip-path: polygon(50% 50%, 0 0, 100% 0, 100% 100%, 0 100%, 0 100%);
-    }
-    100% {
-      clip-path: polygon(50% 50%, 0 0, 100% 0, 100% 100%, 0 100%, 0 0);
-    }
+@keyframes prixClipFix {
+  0% {
+    clip-path: polygon(50% 50%, 0 0, 0 0, 0 0, 0 0, 0 0);
   }
+  25% {
+    clip-path: polygon(50% 50%, 0 0, 100% 0, 100% 0, 100% 0, 100% 0);
+  }
+  50% {
+    clip-path: polygon(50% 50%, 0 0, 100% 0, 100% 100%, 100% 100%, 100% 100%);
+  }
+  75% {
+    clip-path: polygon(50% 50%, 0 0, 100% 0, 100% 100%, 0 100%, 0 100%);
+  }
+  100% {
+    clip-path: polygon(50% 50%, 0 0, 100% 0, 100% 100%, 0 100%, 0 0);
+  }
+}
+
+.swiper-button-next,
+.swiper-button-prev {
+  color: var(--foreground-color);
+  border-radius: 50%;
+  background-color: var(--muted-content);
+  width: 60px;
+  height: 60px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
